More progress on testing
Problem with encoding the teams. Need to re-encode or change the team names before progressing

--- a/Predicting NBA Game Winners.ipynb
+++ b/Predicting NBA Game Winners.ipynb
@@ -3881,14 +3881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add the features that were added to the testing data: \n",
-    "- Home Win \n",
-    "- Home Last Win\n",
-    "- Visitor Last Win\n",
-    "- Home Win Streak\n",
-    "- Visitor Win Streak\n",
-    "- Home Team Ranks Higher\n",
-    "- Home Team Won Last"
+    "## Add features to the DataFrame"
    ]
   },
   {
@@ -5397,6 +5390,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "______________________________________________________________________________________________________________________"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***There was a team name change in the test set of data, causing the previous encoder to not carry over. HOW TO FIX?***\n",
+    "***Start at 30:58 in lecture***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -5410,9 +5418,7 @@
     "visitor_teams_15 = encoding.transform(df_15['Visitor Team'].values)\n",
     "\n",
     "X_teams_15 = np.vstack([home_teams_15, visitor_teams_15]).T\n",
-    "X_teams_15 = onehot.transform(X_teams_15).todense()\n",
-    "\n",
-    "# There was a team name change in the test set of data, causing the previous encoder to not carry over. HOW TO FIX?"
+    "X_teams_15 = onehot.transform(X_teams_15).todense()"
    ]
   },
   {
@@ -5421,8 +5427,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_all_15 = np.hstack([X_home_higher_15, X_teams_15])"
+    "X_all_15 = np.hstack([X_home_higher_15, X_teams_15])\n",
+    "X_all_15.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting the Baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('The home team wins {:.2f}% of the games'.format(100 * np.mean(y_true)))\n",
+    "\n",
+    "y_pred = [1] * len(y_test)\n",
+    "\n",
+    "print('F1: {:.4f}'.format(f1_score(y_test, y_pred, pos_label = None, average = 'weighted')))\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
